@@ -1,8 +1,8 @@
-# $NetBSD: Makefile,v 1.12 2003/08/03 05:50:04 sjg Exp $
+# $NetBSD: Makefile,v 1.13 2003/09/28 21:08:59 sjg Exp $
 #
 
-DISTNAME=	mk-20030731
-PKGNAME=	mk-files-20030731
+DISTNAME=	mk-20030928
+PKGNAME=	mk-files-20030928
 WRKSRC=		${WRKDIR}/mk
 CATEGORIES=	devel
 MASTER_SITES=   ftp://ftp.NetBSD.org/pub/incoming/sjg/
